<resources>
    <string name="app_name">QrSmartReader</string>
    <string name="result">Результат:</string>
    <string name="history">History:</string>
    <string-array name="model_array">
        <item>n</item>
        <item>s</item>
    </string-array>
    <string-array name="cpugpu_array">
        <item>CPU</item>
        <item>GPU</item>
    </string-array>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="write_count">Введите количество</string>
    <string name="clear_qr_history">Очистить историю QR-кодов</string>
    <string name="recognition_type">Режим распознавания:</string>
    <string name="segmentation">Сегментация</string>
    <string name="pose">Детекция ключевых точек</string>
    <string name="model_version_name">Версия модели:</string>
    <string name="fps_count">Счетчик кадров:</string>
    <string name="max_result_label">Ограничение истории:</string>
    <string name="processor">Процессор:</string>
    <string name="cpu">CPU</string>
    <string name="gpu">GPU</string>
    <string name="settings">Настройки</string>
    <string name="galery">Галерея</string>
    <string name="camera">Камера</string>
    <string name="not_worked_recgnition">Не получилось распознать</string>
</resources>