<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings_screen.SettingsScreenFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/settingsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/settings"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/recognition_type"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/rgRecognitionType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/segmentationMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/segmentation" />

            <RadioButton
                android:id="@+id/keyPointsDetectionMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pose" />
        </RadioGroup>

      <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/processor"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/rgProcessorType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/cpuMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/cpu" />

            <RadioButton
                android:id="@+id/gpuMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gpu" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/model_version_name"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/modelVersionSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/fps_count"
            android:textSize="16sp" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/fpsSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/max_result_label"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etMaxResults"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/write_count"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLength="2" />

        <Button
            android:id="@+id/clearHistoryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/clear_qr_history" />

    </LinearLayout>
</ScrollView>